css/main-style.css
:root{
    --container-primary-background: white;
    --container-background-variant1: #b2b2b2;
    --container-background-variant2: #9a9a9a;

    --text-colorBase-1: black;
    --text-colorBase-2: #262626;
    --text-colorB-1: #000833;
    --text-colorB-2: #2b3569;
    --text-colorB-3: #4e5888;
    --text-colorB-4: #8088b2;
    --text-colorR-1: #330000;
    --text-colorR-2: #591919;
    --text-colorR-3: #864f4f;
    --text-colorR-4: #be8989;
    --text-colorG-1: #003304;
    --text-colorG-2: #295919;
    --text-colorG-3: #5a884b;
    --text-colorG-4: #98b98d;
    --text-colorY-1: #332f00;
    --text-colorY-2: #594e19;
    --text-colorY-3: #857c50;
    --text-colorY-4: #c4bd9a;
}

.darkTheme{
    --container-primary-background: #000000;
    --container-background-variant1: #2c2c2c;
    --container-background-variant2: #696969;

    --text-colorBase-1: #ffffff;
    --text-colorBase-2: #adadad;
    --text-colorB-1: #7e89c4;
    --text-colorB-2: #586294;
    --text-colorB-3: #454d79;
    --text-colorB-4: #373e67;
    --text-colorR-1: #cc8181;
    --text-colorR-2: #834040;
    --text-colorR-3: #602929;
    --text-colorR-4: #4f1f1f;
    --text-colorG-1: #82c587;
    --text-colorG-2: #588649;
    --text-colorG-3: #39602c;
    --text-colorG-4: #26461c;
    --text-colorY-1: #d3b348;
    --text-colorY-2: #756b3c;
    --text-colorY-3: #544c25;
    --text-colorY-4: #443d1d;
}

#theme-switch{
    
}

body{
    margin: 0;
    overflow: hidden;
    background-color: #7f7fa6;
}

.basic-text{
    color: var(--text-colorBase-1);
    font-size: 32px;
    margin-bottom: 10px;
}

.lower-text{
    color: var(--text-colorBase-2);
    font-size: 16px;
    margin-bottom: 10px;
}

#animatedCanvasBackground{
    position:absolute;
    /*background: black;*/
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
}

.website-top-bar{
    display: flex;
    overflow: hidden;
    height: auto;
    background-color: var(--container-primary-background);
    justify-content: space-between;
}

.footer-bottom-bar{
    position: fixed;
    background-color: var(--container-primary-background);
    bottom: 0;
    height: auto;
    display: flex;
    padding-bottom: 5px;
    padding-top: 5px;
    width: 100%;
}

/* all different containers*/
.container{
    background-color: transparent;
    position:relative;
    margin: auto;
    padding: 10px;
    box-shadow: 10px var(--text-colorBase-1);
}

.main-container{
    margin-bottom: 15px;
    margin-top: 15px;
    height: min-content;
    background-color: var(--container-background-variant2);
    overflow-x: inherit;
    width: 75%;
}

.burger-menu-container{
    padding: 10px;
    border: var(--text-colorY-1);
    border-radius: 3px;
}

.popup-menu{
    position: absolute;
    max-height: 500px;
    min-width: auto;
    overflow-y: auto;
    left: -50%;
}

.project-container-showoff{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 3px;
    
    /*border: 3px solid var(--container-background-variant2);
    background-color: var(--text-colorY-4);*/
}

.portfolio-project-container{
    flex: 1 1 calc(33.333% - 1rem);
    max-width: calc(33.333% - 1rem);
    box-sizing: border-box;
    border: 3px solid var(--text-colorR-4);
    padding: 3px;
    margin: 5px;
    background-color: var(--text-colorR-4);
    cursor: pointer;
}
.portfolio-project-container:hover{
    scale: 101%;
    background-color: var(--text-colorR-3)
}

.project-image{
    width: auto;
    max-width: 100%;
    max-height: 100%;
    object-fit: cover;
    display: block;
    border: 2px solid var(--text-colorBase-2);
}

/* Button shenanigan */

.button {
     border: none;
    border-radius: 5px;
     padding: 7px 15px 7px 15px;
     display: inline-block;
     justify-content: center;
     align-items: center;
     font-size: 20px;
     transition-duration: 0.2s;
     cursor: pointer;
 }
.button:hover{
    scale:101%;
}
.button:active{
    scale:90%;
    background-color: var(--container-background-variant2);
}
.button-main{
    float: left;
    background-color: transparent;
}
.button-main:hover{
    background-color: var(--text-colorY-4);
}
.button-main:active{
    background-color: var(--text-colorY-3);
}
.button-side{
    margin: 0 0 0 20px;
    padding: 5px 2px 5px 2px;
    float: inherit;
    background-color: transparent;
}
.button-side:hover{
    background-color: var(--text-colorB-4);
}
.button-side:active{
    background-color: var(--text-colorB-3);
}

.footer-button{
    height: 100%;
    padding: 0;
    margin-left: 10px;
    margin-right: 10px;
}
.footer-button:hover{
    scale: 110%;
    rotate: 360deg;
}
.rotate .footer-button{transform: rotate(360deg)}

/* the 3 lines to make an appearing & disappearing menu element that look like ||| */
.burgerHolder{
    align-items: center;
    margin-right: 10px;
    margin-left: 4px;
    padding: 2px;
    float: inherit;
    background-color: transparent;
    cursor: pointer;
}

.burger-bar1, .burger-bar2, .burger-bar3 {
    width: 15px;
    height: 3px;
    background-color: var(--text-colorBase-2);
    margin: 2px 0;
    transition: 0.4s;
}
.change .burger-bar1 {transform: translate(0, 5px) rotate(-405deg);}
.change .burger-bar2 {opacity: 0;}
.change .burger-bar3 {transform: translate(0, -5px) rotate(405deg);}

